added new footage (static and dynamic)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><a href="#Q1">Question 1</a></li>
                 <li><a href="#Q2">Question 2</a></li>
                 <li><a href="#Q3">Question 3</a></li>
-                <li><a href="#Results_align">Résultats d'alignement</a></li>
+                <li><a href="#Results_align">Results</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
