--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </script>
 </head>
 
@@ -112,12 +126,47 @@
 
     <hr>
 
+    <div class="row">
+        <h2>Homography calculation</h2>
+        <p>In order to draw the lines on the field, the first step is to compute the transformation matrix between the
+            actual frame and the footbal field model. To find the homography matrix between the frame and the field
+            model, the user need to gather 4 matching reference points in each of them.</p>
+        <img src="static/img/homographyMatrix.png">
+        <p>
+            Once the homography matrix is computed, we select a point where the first down line should be located and a
+            point for the scrimmage line. Next, the homography matrix is applied to both points to get the location of
+            both clicked points in the field model. After that, the x coordinate of each point is taken and put with the
+            y coordinates of both sidelines to create the extremities of the first down and scrimmage line in the field
+            model.
+        </p>
+        <p>
+            The inverted homography matrix is next applied to these lines extremities to retrieve the start and end
+            point for each lines in the original image.
+        </p>
+    </div>
+    <div class="row">
+        <h2>Line drawing</h2>
+        Now that the proper homography matrix has been calculated, the next step is to create masks in order to draw
+        both lines on the field. To obtain realistic results, it's key to make sure that players and referees look like
+        they are walking over the line. In order to achieve this, a window is created with HSV values sliders. This
+        window allows to render the field mask with the current HSV values of the mask. Once the displayed mask is
+        satisfying, two line masks are draw with the starting and ending points for each line calculated in the previous
+        step.
+        <p>
+            Using different bitwise operations on masks, the inverted HSV field mask and the line mask are added
+            together resulting in a line mask minus everything that is not the field such as players and referees. Next,
+            those 2 lines are draw on the field.
+        </p>
+    </div>
 
 
-    <a name="results"></a>
-    <h2>Results</h2>
-    <p>Static</p>
-    <img src="static/img/footage_line_test.gif">
+    <div class="row">
+        <a name="results"></a>
+        <h2>Results</h2>
+        <p>Static</p>
+        <img src="static/img/footage_line_test.gif">
+
+    </div>
 
 
     <div class="row">
