--- a/index.html
+++ b/index.html
@@ -265,8 +265,14 @@
     <div class="row">
         <a name="results"></a>
         <h2>Results</h2>
-        <p>Static</p>
-        <img src="static/img/footage_line_test.gif">
+        <p>Field 1 - Clip 1</p>
+        <img src="static/img/folder_1_clip_1.gif">
+          <p>Field 1 - Clip 2</p>
+        <img src="static/img/folder_1_clip_2.gif">
+                  <p>Field 4 - Clip 5</p>
+        <img src="static/img/folder_4_clip_5.gif">
+                  <p>Field 4 - Clip 6</p>
+        <img src="static/img/folder_4_clip_6.gif">
 
     </div>
 
